# OpenCUA

./: .gitignore  .gitmodules  LICENSE  README.md
AgentNetBench/: README.md  eval.py  reeval.py  run.py
AgentNetBench/agent/: aguvis.py  opencua.py
AgentNetBench/sample_data/: 20240917210951_gxlvera@gmail.com_118ad264-0aa9-49dd-be57-d1c52df71410.json  20240923220241_st2rb8g@gmail.com_81d55a4d-385a-4236-8ffa-1d0ed5d34da2.json  20240929110759_u3577240@connect.hku.hk_081e87e5-7f08-443c-96ca-2da3dea6c374.json  20241001061110_bryanwang.nlp@gmail.com_6153058e-6a74-46eb-a858-4c07191e5d28.json  20241007183431_hushhhhhhhh0305@gmail.com_f9fa7cd2-deb6-4e14-b070-fee9fd82e9a8.json  s_7f27a11115e596eb.json  s_c53b113bf3e7d362.json  s_df0fd37049f470c2.json
AgentNetBench/utils/: qwen_vl_utils.py
CoTGenerator/: README.md  gen_cot.py  merge_to_jsonl.py  utils.py
CoTGenerator/module/: evaluator.py  reflector.py  reflector_with_prior_judge.py
CoTGenerator/visualization/: app.py
CoTGenerator/visualization/templates/: index.html
DataProcessor/: .gitignore  README.md  pyproject.toml
DataProcessor/datasets/agentnet/raw/20241106114028_e0599885@gmail.com_2c05b837-faae-4b35-8e89-71d4bc2cab66/: a11y.jsonl  element.jsonl  reduced_events_complete.jsonl  task_name.json  top_window.jsonl
DataProcessor/scripts/: extract_raw.sh  raw_to_standardized.sh
DataProcessor/src/gui_agent_data/: __init__.py
DataProcessor/src/gui_agent_data/datasets/agentnet/: extract_raw.py  raw_to_standardized.py  visualize.py
DataProcessor/src/gui_agent_data/schema/: trajectory.py
DataProcessor/src/gui_agent_data/schema/action/: api.py  code.py  gui.py  message.py
DataProcessor/src/gui_agent_data/schema/observation/: axtree.py  image.py  multimodal.py  text.py
DataProcessor/src/gui_agent_data/stage/: extract_raw.py  raw_to_standardized.py
DataProcessor/src/gui_agent_data/utils/: constructor.py  image.py  visualization.py
data/: README.md
data/cot-generate/: .gitignore  README.md  merge_to_jsonl.py
data/cot-generate/gen_cot_example/: raw_example.jsonl
data/cot-generate/module/: generator.py  reflector.py
data/data-process/: README.md  requirements.txt
data/data-process/scripts/: extract_raw.sh  raw_to_standardized.sh
data/data-process/src/: __init__.py  extract_raw.py  raw_to_standardized.py
evaluation/agentnetbench/: .gitignore  README.md  reeval.py  run.py
evaluation/agentnetbench/agent/: aguvis.py  (+3 more)
model/: README.md  requirement.txt
model/inference/: huggingface_inference.py
(+18 files in other folders)
