[project]
name = "gui-agent-data"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Yiheng Xu", email = "charlesyihengxu@gmail.com"},
]
dependencies = [
    "gdown>=5.2.0",
    "pre-commit>=3.7.1",
    "pip>=24.1.1",
    "Pillow>=10.4.0",
    "pydantic>=2.8.2",
    "pandas>=2.2.2",
    "huggingface_hub>=0.23.4",
    "pyarrow>=16.1.0",
    "fastparquet>=2024.5.0",
    "pyautogui>=0.9.54",
    "datasets>=2.20.0",
    "matplotlib>=3.9.0",
    "tensorflow>=2.17.0",
    "orjson>=3.10.7",
    "backoff>=2.2.1",
    "openai>=1.47.0",
    "pybase64>=1.4.0",
    "opencv-python>=4.9.0",
    "tqdm>=4.66.0"
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.2.2",
]
[tool.ruff]
target-version = 'py38'
line-length = 120  # Must agree with Black

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "ISC", # flake8-implicit-str-concat
    "N",  # pep8-naming
    "PGH",  # pygrep-hooks
    # "PTH", # flake8-use-pathlib
    "Q",  # flake8-quotes
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT", # flake8-2020
]

exclude = [
    "migrations",
    "__pycache__",
    "manage.py",
    "settings.py",
    "env",
    ".env",
    "venv",
    ".venv",
]

ignore = [
    "B905",  # zip strict=True; remove once python <3.10 support is dropped.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D401",
    "E402",
    "E501",
    "TRY003",  # Avoid specifying messages outside exception class; overly strict, especially for ValueError
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "chr",
    "typer.Argument",
    "typer.Option",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "S101",  # use of "assert"
    "S102",  # use of "exec"
    "S106",  # possible hardcoded password.
    "PGH001",  # use of "eval"
]

[tool.ruff.lint.pep8-naming]
staticmethod-decorators = [
    "pydantic.validator",
    "pydantic.root_validator",
]
